[tool.poetry]
name = "cdda-tilesets"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
pyvips = "^2.1.15"
pycairo = "^1.20.1"
PyGObject = "^3.42.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
